--- a/settings.conf
+++ b/settings.conf
@@ -25,20 +25,20 @@ sequence:
   - locale
   - keyboard
   - localecfg
-  - luksbootkeyfile
   - luksopenswaphookcfg
+  - luksbootkeyfile
   - initcpiocfg
   - initcpio
   - users
   - displaymanager
   - networkcfg
   - hwclock
-  - services
+  # - services-systemd
+  - mrpacman
   - removeuser
   - grubcfg
   - bootloader
-  - packages
-  # - virtualbox
+  # - packages
   - postcfg
   - umount
 - show:
