--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,48 +1,47 @@
 # Ctlos Calamares
 pkgname=calamares
-pkgver=3.2.1
+pkgver=3.2.2
 pkgrel=1
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
 license=(GPL)
 url="https://github.com/ctlos/ctlos-calamares"
 license=('LGPL')
-depends=('kconfig'
-         'kcoreaddons'
-         'kiconthemes'
+depends=('kconfig' 
+         'kcoreaddons' 
+         'kiconthemes' 
          'ki18n'
-         'kio'
-         'solid'
+         'kio' 
+         'solid' 
+         'yaml-cpp' 
+         'kpmcore>=3.3.0' 
          'squashfs-tools'
-         'yaml-cpp'
-         'kpmcore>=3.3.0'
-         'libpwquality'
          'mkinitcpio-openswap'
-         'boost-libs'
-         'ckbcomp'
-         'hwinfo'
-         'qt5-svg'
-         'qt5-webkit'
+         'boost-libs' 
+         'ckbcomp' 
+         'hwinfo' 
+         'qt5-svg' 
          'polkit-qt5' 
-         'gtk-update-icon-cache')
+         'gtk-update-icon-cache'  
+         'plasma-framework')
 
-makedepends=('extra-cmake-modules'
-             'qt5-tools'
-             'qt5-translations'
-             'git'
+makedepends=('extra-cmake-modules' 
+             'qt5-tools' 
+             'qt5-translations' 
+             'git' 
              'boost')
-
 
 source+=("https://github.com/calamares/calamares/releases/download/v${pkgver}/calamares-${pkgver}.tar.gz"
          git+https://github.com/ctlos/ctlos-calamares#branch=master)
 
-sha256sums=('a9e76ba46819a1f835119d56fd3827b8f8c7f08f633522bf33aefdc67674211a'
+sha256sums=('db04dbe4a577438ec59b61eeb7ab23421c291d86795064dc1c437d09aad81a92'
             'SKIP')
 
 prepare() {
     cp -a ${srcdir}/ctlos-calamares/* ${srcdir}/calamares-${pkgver}
     rm -rf ${srcdir}/ctlos-calamares
     cd ${srcdir}/calamares-${pkgver}
+    sed -i -e 's/"Install configuration files" OFF/"Install configuration files" ON/' CMakeLists.txt
 }
 
 build() {
@@ -51,15 +50,14 @@ build() {
     mkdir -p build
     cd build
         cmake .. \
-        -DCMAKE_BUILD_TYPE=Release \
-        -DCMAKE_INSTALL_PREFIX=/usr \
-        -DCMAKE_INSTALL_LIBDIR=lib \
-        -DWITH_CRASHREPORTER:BOOL=OFF \
-        -DWITH_PYTHONQT:BOOL=OFF \
-        -DSKIP_MODULES="webview interactiveterminal initramfs \
-                        initramfscfg dracut dracutlukscfg \
-                        dummyprocess dummypython dummycpp \
-                        dummypythonqt plasmalnf"
+              -DCMAKE_BUILD_TYPE=Release \
+              -DCMAKE_INSTALL_PREFIX=/usr \
+              -DCMAKE_INSTALL_LIBDIR=lib \
+              -DWITH_PYTHONQT:BOOL=OFF \
+              -DSKIP_MODULES="webview interactiveterminal initramfs \
+                              initramfscfg dracut dracutlukscfg \
+                              dummyprocess dummypython dummycpp \
+                              dummypythonqt services-openrc services-systemd"
         make
 }
 
