--- a/src/modules/mrpacman/mrpacman.conf
+++ b/src/modules/mrpacman/mrpacman.conf
@@ -42,6 +42,6 @@ operations:
       - calamares
       - virtualbox-guest-utils
       - virtualbox-guest-modules-arch
-      - intel-ucode
-  - install:
-      - intel-ucode
+  #     - intel-ucode
+  # - install:
+  #     - intel-ucode
