--- a/src/modules/welcome/welcome.conf
+++ b/src/modules/welcome/welcome.conf
@@ -1,7 +1,7 @@
 ---
 showSupportUrl:         false
 showKnownIssuesUrl:     false
-showReleaseNotesUrl:    true
+showReleaseNotesUrl:    false
 
 requirements:
     requiredStorage:    5.5
