--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -1,7 +1,7 @@
 # Ctlos Calamares
 pkgname=calamares
-pkgver=3.2.2
-pkgrel=1
+pkgver=3.2.3
+pkgrel=1.1
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
 license=(GPL)
@@ -34,7 +34,7 @@ makedepends=('extra-cmake-modules'
 source+=("https://github.com/calamares/calamares/releases/download/v${pkgver}/calamares-${pkgver}.tar.gz"
          git+https://github.com/ctlos/ctlos-calamares#branch=master)
 
-sha256sums=('db04dbe4a577438ec59b61eeb7ab23421c291d86795064dc1c437d09aad81a92'
+sha256sums=('SKIP'
             'SKIP')
 
 prepare() {
