--- a/settings.conf
+++ b/settings.conf
@@ -33,7 +33,7 @@ sequence:
   - displaymanager
   - networkcfg
   - hwclock
-  # - services-systemd
+  - services-systemd
   - mrpacman
   - removeuser
   - grubcfg
