--- a/src/modules/services-systemd/services-systemd.conf
+++ b/src/modules/services-systemd/services-systemd.conf
@@ -63,14 +63,22 @@
 #  - mandatory: true
 
 # By default, no changes are made.
+disable-targets: []
+mask: []
+
 services: []
+  # - name: "NetworkManager"
+  #   mandatory: false
+
+  # - name: "org.cups.cupsd"
+  #   mandatory: false
+
 targets: []
+
 disable:
   - name: "pacman-init"
     mandatory: false
   - name: "choose-mirror"
-  	mandatory: true
-  - name: "reflector"
-  	mandatory: true
-disable-targets: []
-mask: []
+  	mandatory: false
+  # - name: "reflector"
+  # 	mandatory: false
