--- a/src/modules/services-systemd/services-systemd.conf
+++ b/src/modules/services-systemd/services-systemd.conf
@@ -1,7 +1,25 @@
 ---
 
+# By default, no changes are made.
+#services: []
+#targets: []
+#disable: []
+disable-targets: []
+mask: []
+
+# Manjaro settings
+
 services: []
-targets: []
+  # - name: "NetworkManager"
+  #   mandatory: false
+
+  # - name: "org.cups.cupsd"
+  #   mandatory: false
+
+targets:
+  - name: "graphical"
+    mandatory: true
+
 disable:
   - name: "pacman-init"
     mandatory: false
@@ -9,5 +27,3 @@ disable:
   	mandatory: false
   # - name: "reflector"
   # 	mandatory: false
-disable-targets: []
-mask: []
