--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -5,7 +5,7 @@ pkgrel=1.3
 pkgdesc='Distribution-independent installer framework'
 arch=('i686' 'x86_64')
 license=(GPL)
-url="https://github.com/ctlos/ctlos-calamares"
+url="https://github.com/ctlos/calamares"
 license=('LGPL')
 depends=('kconfig' 
          'kcoreaddons' 
@@ -32,14 +32,14 @@ makedepends=('extra-cmake-modules'
              'boost')
 
 source+=("https://github.com/calamares/calamares/releases/download/v${pkgver}/calamares-${pkgver}.tar.gz"
-         git+https://github.com/ctlos/ctlos-calamares#branch=master)
+         git+https://github.com/ctlos/calamares#branch=master)
 
 sha256sums=('eb68f8dc2dd256101e3d59384d5a93c06729abec43ad5f358272066811a1cff9'
             'SKIP')
 
 prepare() {
-    cp -a ${srcdir}/ctlos-calamares/* ${srcdir}/calamares-${pkgver}
-    rm -rf ${srcdir}/ctlos-calamares
+    cp -a ${srcdir}/calamares/* ${srcdir}/calamares-${pkgver}
+    rm -rf ${srcdir}/calamares
     cd ${srcdir}/calamares-${pkgver}
     sed -i -e 's/"Install configuration files" OFF/"Install configuration files" ON/' CMakeLists.txt
 }
@@ -57,7 +57,7 @@ build() {
               -DSKIP_MODULES="webview interactiveterminal initramfs \
                               initramfscfg dracut dracutlukscfg \
                               dummyprocess dummypython dummycpp \
-                              dummypythonqt services-openrc services-systemd"
+                              dummypythonqt services-openrc"
         make
 }
 
