--- a/src/modules/users/users.conf
+++ b/src/modules/users/users.conf
@@ -15,4 +15,4 @@ setRootPassword: true
 doReusePassword: true
 availableShells: /bin/bash, /bin/zsh
 avatarFilePath: ~/.face
-userShell: /bin/fish
+userShell: /bin/zsh
