--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -34,7 +34,7 @@ makedepends=('extra-cmake-modules'
 source+=("https://github.com/calamares/calamares/releases/download/v${pkgver}/calamares-${pkgver}.tar.gz"
          git+https://github.com/ctlos/calamares#branch=master)
 
-sha256sums=('eb68f8dc2dd256101e3d59384d5a93c06729abec43ad5f358272066811a1cff9'
+sha256sums=('SKIP'
             'SKIP')
 
 prepare() {
