--- a/src/modules/welcome/welcome.conf
+++ b/src/modules/welcome/welcome.conf
@@ -17,7 +17,7 @@ requirements:
         - storage
         - ram
         - power
-        - internet
+        # - internet
         - root
         - screen
     # List conditions that must be satisfied (from the list
