--- a/settings.conf
+++ b/settings.conf
@@ -35,7 +35,7 @@ sequence:
   - hwclock
   - mrpacman
   - removeuser
-  - services-systemd
+  # - services-systemd
   - grubcfg
   - bootloader
   # - packages
