--- a/src/modules/mrpacman/mrpacman.conf
+++ b/src/modules/mrpacman/mrpacman.conf
@@ -21,6 +21,7 @@ backend: pacman
 operations:
   - remove:
       - calamares
+      - ckbcomp
   #     - intel-ucode
   # - install:
   #     - intel-ucode
