--- a/settings.conf
+++ b/settings.conf
@@ -46,3 +46,6 @@ sequence:
 branding: ctlos
 prompt-install: false
 dont-chroot: false
+oem-setup: false
+disable-cancel: false
+disable-cancel-during-exec: false
