--- a/settings.conf
+++ b/settings.conf
@@ -27,18 +27,19 @@ sequence:
   - localecfg
   - luksopenswaphookcfg
   - luksbootkeyfile
-  - initcpiocfg
-  - initcpio
   - users
   - displaymanager
   - networkcfg
   - hwclock
-  - mrpacman
+  # - services-systemd
+  - packages
+  - initcpiocfg
+  - initcpio
   - removeuser
+  - ucode
   - grubcfg
   - bootloader
-  # - packages
-  - postcfg
+  - shellprocess
   - umount
 - show:
   - finished
