--- a/settings.conf
+++ b/settings.conf
@@ -36,10 +36,9 @@ sequence:
   - initcpiocfg
   - initcpio
   - removeuser
-  - ucode
   - grubcfg
   - bootloader
-  - shellprocess
+  # - shellprocess
   - umount
 - show:
   - finished
