--- a/settings.conf
+++ b/settings.conf
@@ -11,6 +11,7 @@ modules-search: [ local ]
 sequence:
 - show:
   - welcome
+  # - netinstall
   - locale
   - keyboard
   - partition
@@ -28,11 +29,11 @@ sequence:
   - luksopenswaphookcfg
   - luksbootkeyfile
   - users
-  - displaymanager
   - networkcfg
   - hwclock
   # - services-systemd
   - packages
+  # - displaymanager
   - initcpiocfg
   - initcpio
   - removeuser
