--- a/src/modules/netinstall/netinstall.conf
+++ b/src/modules/netinstall/netinstall.conf
@@ -4,7 +4,8 @@
 #   groupsUrl: http://example.org/netinstall.php
 # or it can be a locally installed file:
 #   groupsUrl: file:///usr/share/calamares/netinstall.yaml
-groupsUrl: https://raw.githubusercontent.com/ctlos/calamares-net/master/src/modules/netinstall/netinstall.yaml
+# groupsUrl: https://raw.githubusercontent.com/ctlos/calamares-net/master/src/modules/netinstall/netinstall.yaml
+groupsUrl: file:///etc/calamares/modules/netinstall/netinstall.yaml
 
 # If the installation can proceed without netinstall (e.g. the Live CD
 # can create a working installed system, but netinstall is preferred
