--- a/settings.conf
+++ b/settings.conf
@@ -29,11 +29,11 @@ sequence:
   - luksopenswaphookcfg
   - luksbootkeyfile
   - users
+  - displaymanager
   - networkcfg
   - hwclock
   # - services-systemd
   - packages
-  # - displaymanager
   - initcpiocfg
   - initcpio
   - removeuser
