--- a/settings.conf
+++ b/settings.conf
@@ -11,7 +11,7 @@ modules-search: [ local ]
 sequence:
 - show:
   - welcome
-  # - netinstall
+  - netinstall
   - locale
   - keyboard
   - partition
@@ -40,6 +40,7 @@ sequence:
   - grubcfg
   - bootloader
   # - shellprocess
+  - postcfg
   - umount
 - show:
   - finished
