--- a/pkg/PKGBUILD
+++ b/pkg/PKGBUILD
@@ -17,7 +17,7 @@ backup=('usr/share/calamares/modules/bootloader.conf'
         'usr/share/calamares/modules/unpackfs.conf')
 
 source+=("https://github.com/calamares/calamares/releases/download/v${pkgver}/calamares-${pkgver}.tar.gz"
-         git+https://github.com/ctlos/calamares#branch=master)
+         git+https://github.com/ctlos/calamares#branch=dev)
 
 sha256sums=('SKIP'
             'SKIP')
