--- a/settings.conf
+++ b/settings.conf
@@ -3,15 +3,21 @@
 ---
 modules-search: [ local ]
 
-#instances:
-#- id:       owncloud
-#  module:   webview
-#  config:   owncloud.conf
+instances:
+- id:       core
+  module:   netinstall
+  config:   core.conf
+- id:       kernel
+  module:   netinstall
+  config:   kernel.conf
 
 sequence:
 - show:
   - welcome
-  - netinstall
+  # - netinstall
+  - netinstall@core
+  - netinstall@kernel
+  - netinstall@internet
   - locale
   - keyboard
   - partition
