--- a/settings.conf
+++ b/settings.conf
@@ -6,10 +6,13 @@ modules-search: [ local ]
 instances:
 - id:       core
   module:   netinstall
-  config:   core.conf
+  config:   netinstall-core.conf
 - id:       kernel
   module:   netinstall
-  config:   kernel.conf
+  config:   netinstall-kernel.conf
+- id:       internet
+  module:   netinstall
+  config:   netinstall-internet.conf
 
 sequence:
 - show:
@@ -34,19 +37,18 @@ sequence:
   - localecfg
   - luksopenswaphookcfg
   - luksbootkeyfile
-  - initcpiocfg
-  - initcpio
   - users
-  - displaymanager
   - networkcfg
   - hwclock
   # - services-systemd
+  # - shellprocess
   - packages
+  - displaymanager
+  - initcpiocfg
+  - initcpio
   - removeuser
   - grubcfg
   - bootloader
-  # - shellprocess
-  - postcfg
   - umount
 - show:
   - finished
