--- a/src/modules/packages/packages.conf
+++ b/src/modules/packages/packages.conf
@@ -6,7 +6,7 @@ update_db: true
 update_system: false
 
 operations:
-  - remove:
+  - try_remove:
     - calamares
     - ckbcomp
   #   - intel-ucode
