--- a/settings.conf
+++ b/settings.conf
@@ -4,9 +4,9 @@
 modules-search: [ local ]
 
 instances:
-- id:       core
+- id:       base
   module:   netinstall
-  config:   netinstall-core.conf
+  config:   netinstall-base.conf
 - id:       kernel
   module:   netinstall
   config:   netinstall-kernel.conf
@@ -18,7 +18,7 @@ sequence:
 - show:
   - welcome
   # - netinstall
-  - netinstall@core
+  - netinstall@base
   - netinstall@kernel
   - netinstall@internet
   - locale
