--- a/src/modules/welcome/welcome.conf
+++ b/src/modules/welcome/welcome.conf
@@ -1,7 +1,7 @@
 ---
-showSupportUrl:         false
-showKnownIssuesUrl:     false
-showReleaseNotesUrl:    false
+showSupportUrl:         true
+showKnownIssuesUrl:     true
+showReleaseNotesUrl:    true
 
 requirements:
     requiredStorage:    5.5
@@ -28,3 +28,4 @@ requirements:
         # - storage
         - ram
         # - root
+        - - internet
