--- a/settings.conf
+++ b/settings.conf
@@ -3,27 +3,27 @@
 ---
 modules-search: [ local ]
 
-instances:
-- id:       kernel
-  module:   netinstall
-  config:   netinstall-kernel.conf
-- id:       base
-  module:   netinstall
-  config:   netinstall-base.conf
-- id:       internet
-  module:   netinstall
-  config:   netinstall-internet.conf
+# instances:
+# - id:       kernel
+#   module:   netinstall
+#   config:   netinstall-kernel.conf
+# - id:       base
+#   module:   netinstall
+#   config:   netinstall-base.conf
+# - id:       internet
+#   module:   netinstall
+#   config:   netinstall-internet.conf
 
 sequence:
 - show:
   - welcome
   - locale
   - keyboard
+  - netinstall
   - partition
-  # - netinstall
-  - netinstall@kernel
-  - netinstall@base
-  - netinstall@internet
+  # - netinstall@kernel
+  # - netinstall@base
+  # - netinstall@internet
   - users
   - summary
 - exec:
