--- a/src/modules/netinstall/netinstall.yaml
+++ b/src/modules/netinstall/netinstall.yaml
@@ -1,194 +1,377 @@
-- name: "Default"
-  description: "Default group"
-  hidden: true
+- name: "Base-devel + Common packages"
+  description: "Recommended. Don't change unless you know what you're doing. Base-devel group and some other commom utilities (generic)"
+  hidden: false
   selected: true
   critical: false
   packages:
-    - accountsservice
-    - archlinux-appstream-data
-    - archlinux-keyring
-    - autoconf
-    - automake
-    - b43-fwcutter
-    - bash
-    - bind-tools
-    - binutils
-    - btrfs-progs
-    - bzip2
-    - coreutils
-    - crda
-    - cryptsetup
-    - dcraw
-    - device-mapper
-    - diffutils
-    - dmidecode
-    - dosfstools
-    - e2fsprogs
-    - efibootmgr
-    - encfs
-    - ethtool
-    - exfat-utils
-    - f2fs-tools
-    - fakeroot
-    - ffmpegthumbnailer
-    - file
-    - filesystem
-    - findutils
-    - gawk
-    - gcc
-    - gcc-libs
-    - gettext
-    - glibc
-    - gpm
-    - grep
-    - grub
-    - gsfonts
-    - gucharmap
-    - haveged
-    - hunspell
-    - inetutils
-    - intel-ucode
-    - iproute2
-    - iputils
-    - ipw2100-fw
-    - ipw2200-fw
-    - jfsutils
-    - less
-    - libdvdcss
-    - libtool
-    - licenses
-    - linux
-    - logrotate
-    - lvm2
-    - m4
-    - make
-    - man-db
-    - man-pages
-    - mc
-    - mdadm
-    - memtest86+
-    - mkinitcpio-nfs-utils
-    - mlocate
-    - nano
-    - nbd
-    - ntfs-3g
-    - ntp
-    - os-prober
-    - pacman
-    - patch
-    - pciutils
-    - perl
-    - pkg-config
-    - pkgfile
-    - procps-ng
-    - psmisc
-    - python-urllib3
-    - python-xdg
-    - reiserfsprogs
-    - rsync
-    - s-nail
-    - sed
-    - shadow
-    - smartmontools
-    - sudo
-    - sysfsutils
-    - syslinux
-    - systemd-sysvcompat
-    - tar
-    - texinfo
-    - tlp
-    - upower
-    - usb_modeswitch
-    - usbutils
-    - util-linux
-    - wget
-    - which
-    - whois
-    - wireless_tools
-    - wpa_actiond
-    - xapps
-    - xfsprogs
-    - nmap
-    - tcpdump
-    - testdisk
-    - openconnect
-    - openssh
-    - openvpn
-    - xorg-apps
+    - base-devel
+    - yay
+    - linux-headers
+    - linux-firmware
+    - pacman-contrib
+    - xf86-video-vesa
     - xorg-server
     - xorg-xinit
-    - xorg-xkill
-    - mesa
-    - mesa-vdpau
-    - intel-tbb
-    - libva
-    - libva-mesa-driver
-    - libva-intel-driver
-    - libva-vdpau-driver
-    - xf86-input-evdev
-    - xf86-input-keyboard
     - xf86-input-libinput
-    - xf86-input-mouse
-    - xf86-input-vmmouse
-    - xf86-input-void
     - xf86-video-amdgpu
     - xf86-video-ati
-    - xf86-video-dummy
     - xf86-video-fbdev
     - xf86-video-intel
-    - xf86-video-nouveau
-    - xf86-video-openchrome
-    - xf86-video-sisusb
-    - xf86-video-vesa
-    - xf86-video-vmware
-    - xf86-video-voodoo
-    - ttf-dejavu
-    - bash-completion
-    - zsh
-    - zsh-syntax-highlighting
-    - git
-    - neofetch
-    - htop
-    - reflector
-    - xfce4
-    - xfce4-xkb-plugin
+    - xorg-xkill
+    - xorg-xrandr
+    - xorg-xinput
+    - xorg-xrandr
+    - xdg-utils
     - xdg-user-dirs
+    - xdg-user-dirs-gtk
+    - gvfs
+    - gvfs-mtp
+    - gvfs-afc
+    - gvfs-goa
+    - gvfs-google
+    - gvfs-gphoto2
+    - gvfs-nfs
+    - gvfs-smb
+    - accountsservice
+    - smartmontools
+    - libwnck3
+    - b43-fwcutter
+    - broadcom-wl-dkms
+    - dnsutils
+    - ipw2100-fw
+    - ipw2200-fw
+    - modemmanager
+    - netctl
+    - net-tools
+    - ntfs-3g
+    - networkmanager
+    - networkmanager-openvpn
+    - nss-mdns
+    - usb_modeswitch
+    - whois
+    - dhclient
+    - ethtool
+    - openconnect
+    - openvpn
+    - rp-pppoe
+    - wireless-regdb
+    - wireless_tools
+    - wpa_supplicant
+    - wvdial
+    - gnu-netcat
+    - iwd
+    - linux-atm
+    - ndisc6
+    - ppp
+    - pptpclient
+    - vpnc
+    - xl2tpd
+    - dialog
+    - dnsmasq
+    - upower
+    - hwinfo
+    - gtop
+    - python
+    - solid
+    - mlocate
+    - ttf-dejavu
+    - gnu-free-fonts
+    - ttf-liberation
+    - ttf-bitstream-vera
+    - ttf-ubuntu-font-family
+    - cantarell-fonts
+    - noto-fonts
+    - noto-fonts-cjk
+    - ttf-croscore
+    - ttf-carlito
+    - ttf-caladea
+    - firefox
+    - alsa-utils
+    - alsa-plugins
+    - alsa-firmware
+    - hardinfo
+    - glances
+    - htop
+    - screenfetch
+    - neofetch
+    - pulseaudio
+    - pavucontrol
+    - paprefs
+    - ffmpegthumbnailer
+    - poppler-glib
+    - libgsf
+    - libopenraw
+    - freetype2
+    - gst-libav
+    - gst-plugins-bad
+    - gst-plugins-ugly
+    - mplayer
+    - libdvdcss
+    - efibootmgr
+    - dosfstools
+    - mtools
+    - openssh
+    - intel-ucode
+    - amd-ucode
+    - os-prober
+    - grub-tools
+    - wget
+    - bash-completion
+    - lsb-release
+    - pcurses
+    - s-tui
+    - tlp
+    - yad
+    - reflector
+    - endeavouros-theming
+    - welcome
+    - eos-update-notifier
+    - nvidia-installer-dkms
+    - mkinitcpio-openswap
+- name: "XFCE4-Desktop"
+  description: "XFCE4 - lightweight desktop fast and low on system resources, visually appealing and user friendly."
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - xfce4
+    - mousepad
+    - orage
+    - parole
+    - ristretto
+    - thunar-archive-plugin
+    - thunar-media-tags-plugin
+    - xfce4-battery-plugin
+    - xfce4-datetime-plugin
+    - xfce4-mount-plugin
+    - xfce4-netload-plugin
+    - xfce4-notifyd
+    - xfce4-pulseaudio-plugin
+    - xfce4-screensaver
+    - xfce4-screenshooter
+    - xfce4-taskmanager
+    - xfce4-wavelan-plugin
+    - xfce4-weather-plugin
+    - xfce4-whiskermenu-plugin
+    - xfce4-xkb-plugin
+    - file-roller
+    - network-manager-applet
+    - leafpad
+    - epdfview
+    - galculator
+    - blueberry
     - lightdm
     - lightdm-gtk-greeter
-    - mousepad
-    - arc-gtk-theme
-    - papirus-icon-theme
-    - gparted
-    - virtualbox-guest-modules-arch
-    - virtualbox-guest-utils
-- name: "Wireless"
-  description: "Tools for wireless connections"
-  hidden: false
-  selected: true
-  critical: true
-  packages:
-    - dialog
-    - mobile-broadband-provider-info
-    - modemmanager
-    - networkmanager
-    - network-manager-applet
-    - networkmanager-dispatcher-ntpd
-    - networkmanager-openconnect
-    - networkmanager-openvpn
-    - networkmanager-pptp
-    - networkmanager-vpnc
-    - wpa_supplicant
-- name: "Aur Ctlos Repo"
-  description: "Tools for the Arch Community Repository"
-  hidden: false
-  selected: true
-  critical: true
-  packages:
-    - mkinitcpio-openswap
-    - yay
-    - oh-my-zsh-git
-    - zsh-autosuggestions
-    - xsettingsd
-    - ttf-clear-sans
-    - ttf-roboto-mono
+    - lightdm-gtk-greeter-settings
+    - arc-x-icons-theme
     - capitaine-cursors
+    - arc-gtk-theme
+    - gnome-packagekit
+- name: "MATE-Desktop"
+  description: "MATE Desktop - the continuation of GNOME 2"
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - mate
+    - mate-extra
+    - celluloid
+    - network-manager-applet
+    - lightdm
+    - lightdm-gtk-greeter
+    - lightdm-gtk-greeter-settings
+    - gnome-packagekit
+    - arc-x-icons-theme
+    - arc-gtk-theme
+- name: "KDE-Desktop"
+  description: "KDE-Plasma Desktop - Simple by default, powerful when needed."
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - plasma
+    - packagekit-qt5
+    - kdeconnect
+    - fwupd
+    - python-dbus
+    - kdebase-meta
+    - python-dbus
+    - gwenview
+    - ark
+    - okular
+- name: "GNOME-Desktop"
+  description: "GNOME Desktop - designed to put you in control and get things done. "
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - gnome
+    - gnome-tweaks
+    - nautilus-sendto
+    - gnome-nettool
+    - gnome-usage
+    - gnome-multi-writer
+    - adwaita-icon-theme
+    - chrome-gnome-shell
+    - gnome-software-packagekit-plugin
+    - gnome-packagekit
+    - fwupd
+    - arc-x-icons-theme
+    - arc-gtk-theme
+- name: "Cinnamon-Desktop"
+  description: "Cinnamon Desktop - advanced innovative features and a traditional user experience."
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - cinnamon
+    - blueberry
+    - cinnamon-translations
+    - gnome-terminal
+    - gnome-system-monitor
+    - gpicview-gtk3
+    - celluloid
+    - x-apps
+    - file-roller
+    - lightdm
+    - lightdm-gtk-greeter
+    - lightdm-gtk-greeter-settings
+    - nemo-fileroller
+    - nemo-image-converter
+    - nemo-preview
+    - nemo-seahorse
+    - nemo-share
+    - gnome-screenshot
+    - gnome-calculator
+    - gnome-packagekit
+    - arc-x-icons-theme
+    - arc-gtk-theme
+- name: "Budgie-Desktop"
+  description: "Budgie - I Tawt I Taw A Purdy Desktop"
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - budgie-desktop
+    - gnome
+    - gnome-screensaver
+    - lightdm
+    - lightdm-gtk-greeter
+    - lightdm-gtk-greeter-settings
+    - network-manager-applet
+    - gnome-software-packagekit-plugin
+    - gnome-packagekit
+    - fwupd
+    - arc-x-icons-theme
+    - arc-gtk-theme
+- name: "Deepin-Desktop"
+  description: "Deepin Desktop - beautiful, easy to use, safe and reliable. "
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - deepin
+    - deepin-extra
+    - lightdm
+    - lightdm-gtk-greeter
+    - lightdm-gtk-greeter-settings
+    - file-roller
+- name: "i3 Window Manager"
+  description: "i3 tiling window manager, primarily targeted at developers and advanced users. "
+  hidden: true
+  selected: false
+  critical: false
+  packages:
+    - i3-wm
+    - i3blocks
+    - i3lock
+    - i3status
+    - network-manager-applet
+    - arandr
+    - archlinux-xdg-menu
+    - lxappearance-gtk3
+    - otf-font-awesome
+    - dmenu
+    - script
+    - polkit-gnome
+    - pcmanfm
+    - terminator
+    - lightdm
+    - lightdm-gtk-greeter
+    - lightdm-gtk-greeter-settings
+- name: "LXQT-Desktop"
+  description: "The Lightweight Qt Desktop Environment."
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - lxqt
+    - xdg-utils
+    - sddm
+    - libpulse
+    - libstatgrab
+    - libsysstat
+    - lm_sensors
+    - network-manager-applet
+    - oxygen-icons
+    - breeze
+    - breeze-gtk
+    - notepadqq
+    - smplayer
+    - pavucontrol-qt
+    - xscreensaver
+- name: "Openbox"
+  description: "Openbox is a highly configurable, next generation window manager with extensive standards support."
+  hidden: true
+  selected: false
+  critical: false
+  packages:
+    - openbox
+    - obconf
+    - lxappearance-obconf
+    - lxinput
+    - lxrandr
+    - arandr
+    - menumaker
+    - archlinux-xdg-menu
+    - lightdm
+    - lightdm-gtk-greeter
+    - lightdm-gtk-greeter-settings
+- name: "Printing-Support"
+  description: "Support for printing (Cups)"
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - cups
+    - cups-filters
+    - cups-pdf
+    - ghostscript
+    - gsfonts
+    - foomatic-db-engine
+    - foomatic-db
+    - foomatic-db-ppds
+    - foomatic-db-nonfree
+    - foomatic-db-nonfree-ppds
+    - gutenprint
+    - foomatic-db-gutenprint-ppds
+    - system-config-printer
+    - hplip
+    - splix
+- name: "Accessibility Tools"
+  description: "Screen reader and mouse tweak"
+  hidden: false
+  selected: false
+  critical: false
+  packages:
+    - orca
+    - mousetweaks
+- name: "Nvidia Drivers"
+  description: "Proprietary Nvidia Driver: not for legacy or hybrid cards!"
+  hidden: false
+  selected: true
+  critical: false
+  packages:
+    - nvidia
+    - nvidia-settings
+    - lib32-nvidia-utils
