--- a/src/modules/netinstall/netinstall.conf
+++ b/src/modules/netinstall/netinstall.conf
@@ -1,17 +1,8 @@
----
-# This is the URL that is retrieved to get the netinstall groups-and-packages
-# data (which should be in the format described in netinstall.yaml), e.g.:
-#   groupsUrl: http://example.org/netinstall.php
-# or it can be a locally installed file:
-#   groupsUrl: file:///usr/share/calamares/netinstall.yaml
-# groupsUrl: https://raw.githubusercontent.com/ctlos/calamares-net/master/src/modules/netinstall/netinstall.yaml
 groupsUrl: file:///usr/share/calamares/modules/netinstall/netinstall.yaml
-
-# If the installation can proceed without netinstall (e.g. the Live CD
-# can create a working installed system, but netinstall is preferred
-# to bring it up-to-date or extend functionality) leave this set to
-# false (the default). If set to true, the netinstall data is required.
-#
-# This only has an effect if the netinstall data cannot be retrieved,
-# or is corrupt: having "required" set, means the install cannot proceed.
 required: false
+
+label:
+    sidebar: "Base pkg"
+    sidebar[ru]: "Базовые пакеты"
+    title: "Base pkg"
+    title[ru]: "Базовые пакеты"
