--- a/src/modules/netinstall/netinstall.conf
+++ b/src/modules/netinstall/netinstall.conf
@@ -1,4 +1,7 @@
+---
+# groupsUrl: https://raw.githubusercontent.com/ctlos/calamares-net/master/src/modules/netinstall/netinstall.yaml
 groupsUrl: file:///usr/share/calamares/modules/netinstall/netinstall.yaml
+
 required: false
 
 label:
