--- a/src/modules/welcome/welcome.conf
+++ b/src/modules/welcome/welcome.conf
@@ -1,7 +1,7 @@
 ---
-showSupportUrl:         true
-showKnownIssuesUrl:     true
-showReleaseNotesUrl:    true
+showSupportUrl:         false
+showKnownIssuesUrl:     false
+showReleaseNotesUrl:    false
 
 requirements:
     requiredStorage:    5.5
@@ -28,4 +28,4 @@ requirements:
         # - storage
         - ram
         # - root
-        - - internet
+        - internet
