--- a/settings.conf
+++ b/settings.conf
@@ -3,24 +3,24 @@
 ---
 modules-search: [ local ]
 
-# instances:
-# - id:       base
-#   module:   netinstall
-#   config:   netinstall-base.conf
-# - id:       kernel
-#   module:   netinstall
-#   config:   netinstall-kernel.conf
-# - id:       internet
-#   module:   netinstall
-#   config:   netinstall-internet.conf
+instances:
+- id:       base
+  module:   netinstall
+  config:   base.conf
+- id:       kernel
+  module:   netinstall
+  config:   kernel.conf
+- id:       internet
+  module:   netinstall
+  config:   internet.conf
 
 sequence:
 - show:
   - welcome
-  - netinstall
-  # - netinstall@base
-  # - netinstall@kernel
-  # - netinstall@internet
+  # - netinstall
+  - netinstall@base
+  - netinstall@kernel
+  - netinstall@internet
   - locale
   - keyboard
   - partition
