--- a/settings.conf
+++ b/settings.conf
@@ -6,13 +6,13 @@ modules-search: [ local ]
 instances:
 - id:       base
   module:   netinstall
-  config:   base.conf
+  config:   netinstall-base.conf
 - id:       kernel
   module:   netinstall
-  config:   kernel.conf
+  config:   netinstall-kernel.conf
 - id:       internet
   module:   netinstall
-  config:   internet.conf
+  config:   netinstall-internet.conf
 
 sequence:
 - show:
