--- a/src/modules/netinstall/netinstall.conf
+++ b/src/modules/netinstall/netinstall.conf
@@ -11,8 +11,8 @@
 #
 # The format of the groups file is documented in `README.md`.
 #
-   # groupsUrl: file:///usr/share/calamares/modules/netinstall.yaml
-   groupsUrl: https://raw.githubusercontent.com/ctlos/calamares/dev/src/modules/netinstall/netinstall.yaml
+# groupsUrl: file:///usr/share/calamares/modules/netinstall.yaml
+# groupsUrl: https://raw.githubusercontent.com/ctlos/calamares/dev/src/modules/netinstall/netinstall.yaml
 
 # If the installation can proceed without netinstall (e.g. the Live CD
 # can create a working installed system, but netinstall is preferred
@@ -43,7 +43,7 @@ required: false
 #   - "Browser package"
 #   - "Web browser"
 label:
-    sidebar: "Package selection"
-    sidebar[ru]: "Выбор пакетов"
-    title: "Package selection"
-    title[ru]: "Выбор пакетов"
+    # sidebar: "Package selection"
+    # sidebar[ru]: "Выбор пакетов"
+    # title: "Package selection"
+    # title[ru]: "Выбор пакетов"
