--- a/src/modules/netinstall/netinstall-base.yaml
+++ b/src/modules/netinstall/netinstall-base.yaml
@@ -1,7 +1,7 @@
 - name: "Base"
   description: "Base Ctlos"
   critical: false
-  hidden: true
+  hidden: false
   selected: true
   expanded: true
   packages:
