--- a/settings.conf
+++ b/settings.conf
@@ -4,23 +4,23 @@
 modules-search: [ local ]
 
 instances:
-- id:       base
-  module:   netinstall
-  config:   netinstall-base.conf
 - id:       kernel
   module:   netinstall
   config:   netinstall-kernel.conf
-- id:       internet
+- id:       desktop
   module:   netinstall
-  config:   netinstall-internet.conf
+  config:   netinstall-desktop.conf
+- id:       applications
+  module:   netinstall
+  config:   netinstall-applications.conf
 
 sequence:
 - show:
   - welcome
   # - netinstall
-  - netinstall@base
   - netinstall@kernel
-  - netinstall@internet
+  - netinstall@desktop
+  - netinstall@applications
   - locale
   - keyboard
   - partition
