--- a/src/modules/netinstall/netinstall-applications.conf
+++ b/src/modules/netinstall/netinstall-applications.conf
@@ -6,7 +6,7 @@ groupsUrl: file:///usr/share/calamares/modules/netinstall-internet.yaml
 required: false
 
 label:
-    sidebar: "Internet"
-    sidebar[ru]: "Интернет"
-    title: "Internet"
-    title[ru]: "Интернет"
+    sidebar: "Applications"
+    sidebar[ru]: "Приложения"
+    title: "Applications"
+    title[ru]: "Приложения"
