--- a/src/modules/netinstall/netinstall-kernel.conf
+++ b/src/modules/netinstall/netinstall-kernel.conf
@@ -6,7 +6,7 @@ groupsUrl: file:///usr/share/calamares/modules/netinstall-kernel.yaml
 required: false
 
 label:
-    sidebar: "Kernel"
-    sidebar[ru]: "Ядро"
-    title: "Kernel"
-    title[ru]: "Ядро"
+    sidebar: "Kernel & Drivers"
+    sidebar[ru]: "Ядро и драйвера"
+    title: "Kernel & Drivers"
+    title[ru]: "Ядро и драйвера"
