--- a/src/modules/netinstall/netinstall-kernel.yaml
+++ b/src/modules/netinstall/netinstall-kernel.yaml
@@ -1,55 +1,34 @@
-- name: "Linux kernel without any nvidia"
-  description: "Installs only the latest linux kernel (not the one from iso)"
-  critical: false
-  hidden: false
-  selected: false
-  packages:
-    - linux
-- name: "Linux-lts kernel without any nvidia"
-  description: "Installs only the linux-lts kernel"
+- name: "Linux-lts"
+  description: "Install linux-lts kernel"
   critical: false
   hidden: false
   selected: false
   packages:
     - linux-lts
-- name: "Linux-zen kernel without any nvidia"
-  description: "Installs only the linux-zen kernel"
+    - linux-lts-headers
+- name: "Linux-zen"
+  description: "Install linux-zen kernel"
   critical: false
   hidden: false
   selected: false
   packages:
     - linux-zen
-- name: "Nvidia with linux kernel"
-  description: "Installs nvidia and linux kernel - check Arch wiki nvidia"
+    - linux-zen-headers
+- name: "Nvidia"
+  description: "Install nvidia"
   critical: false
   hidden: false
   selected: false
   packages:
-    - linux
     - nvidia
     - nvidia-settings
     - nvidia-utils
-- name: "Nvidia-lts with linux-lts kernel"
-  description: "Installs nvidia-lts and linux-lts kernel - check Arch wiki nvidia"
+- name: "Nvidia-lts"
+  description: "Install nvidia-lts"
   critical: false
   hidden: false
   selected: false
   packages:
-    - linux-lts
     - nvidia-lts
     - nvidia-settings
     - nvidia-utils
-- name: "Intel-ucode"
-  description: "Installs intel-ucode - see Arch wiki microcode"
-  critical: false
-  hidden: false
-  selected: false
-  packages:
-    - intel-ucode
-- name: "Amd-ucode"
-  description: "Installs amd-ucode - see Arch wiki microcode"
-  critical: false
-  hidden: false
-  selected: false
-  packages:
-    - amd-ucode
