--- a/src/modules/packages/packages.conf
+++ b/src/modules/packages/packages.conf
@@ -1,13 +1,13 @@
 ---
 backend: pacman
 skip_if_no_internet: false
-update_db: true
+update_db: false
 update_system: false
 
 operations:
   - try_remove:
     - calamares
     - ckbcomp
-  #   - intel-ucode
+    - mkinitcpio-openswap
   # - install:
   #   - intel-ucode
