--- a/src/modules/netinstall/netinstall-desktop.conf
+++ b/src/modules/netinstall/netinstall-desktop.conf
@@ -1,7 +1,7 @@
 ---
 # This is the URL that is retrieved to get the netinstall groups-and-packages
-groupsUrl: file:///usr/share/calamares/modules/netinstall-desktop.yaml
-# groupsUrl: https://raw.githubusercontent.com/ctlos/calamares/dev/src/modules/netinstall/netinstall-desktop.yaml
+# groupsUrl: file:///usr/share/calamares/modules/netinstall-desktop.yaml
+groupsUrl: https://raw.githubusercontent.com/ctlos/calamares/dev/src/modules/netinstall/netinstall-desktop.yaml
 
 required: false
 
